syntax = "proto3";

package pb;

//import "user.proto";

option go_package = "gitlab.com/indie-developers/go-api-echo-template/pb";

message CreateUserRequest {
  string name = 1;
  string last_name = 2;
  string email = 3;
  // TODO: add password
}

message CreateUserResponse {
}






