syntax = "proto3";

package pb;

import "rpc_create_user.proto";

option go_package = "gitlab.com/indie-developers/go-api-echo-template/pb";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}








